hunt_src = [
    'Assert.d',
    'Boolean.d',
    'Byte.d',
    'Char.d',
    'collection/AbstractCollection.d',
    'collection/AbstractDeque.d',
    'collection/AbstractList.d',
    'collection/AbstractMap.d',
    'collection/AbstractQueue.d',
    'collection/AbstractSequentialList.d',
    'collection/AbstractSet.d',
    'collection/AbstractTrie.d',
    'collection/Array.d',
    'collection/ArrayDeque.d',
    'collection/ArrayList.d',
    'collection/ArrayTernaryTrie.d',
    'collection/ArrayTrie.d',
    'collection/BitSet.d',
    'collection/Buffer.d',
    'collection/BufferUtils.d',
    'collection/ByteBuffer.d',
    'collection/CirularQueue.d',
    'collection/Collection.d',
    'collection/Collections.d',
    'collection/Common.d',
    'collection/Deque.d',
    'collection/DirectByteBuffer.d',
    'collection/Enumeration.d',
    'collection/HashMap.d',
    'collection/HashSet.d',
    'collection/HeapByteBuffer.d',
    'collection/Iterator.d',
    'collection/LinkedHashMap.d',
    'collection/LinkedHashSet.d',
    'collection/LinkedList.d',
    'collection/LinkedMultiValueMap.d',
    'collection/List.d',
    'collection/Map.d',
    'collection/MappedByteBuffer.d',
    'collection/MultiMap.d',
    'collection/MultiValueMap.d',
    'collection/NavigableMap.d',
    'collection/NavigableSet.d',
    'collection/package.d',
    'collection/Queue.d',
    'collection/Radix.d',
    'collection/Set.d',
    'collection/SortedMap.d',
    'collection/SortedSet.d',
    'collection/StringBuffer.d',
    'collection/TreeMap.d',
    'collection/TreeSet.d',
    'collection/TreeTrie.d',
    'collection/Trie.d',
    'concurrency/AbstractExecutorService.d',
    'concurrency/AbstractOwnableSynchronizer.d',
    'concurrency/AbstractQueuedSynchronizer.d',
    'concurrency/atomic/AtomicBiInteger.d',
    'concurrency/atomic/AtomicHelper.d',
    'concurrency/atomic/package.d',
    'concurrency/BlockingQueue.d',
    'concurrency/CompletableFuture.d',
    'concurrency/CompletionStage.d',
    'concurrency/ConcurrentHashMap.d',
    'concurrency/ConcurrentMap.d',
    'concurrency/CountedCompleter.d',
    'concurrency/CountingCallback.d',
    'concurrency/Delayed.d',
    'concurrency/Exceptions.d',
    'concurrency/Executors.d',
    'concurrency/ExecutorService.d',
    'concurrency/ForkJoinPool.d',
    'concurrency/ForkJoinTask.d',
    'concurrency/ForkJoinTaskHelper.d',
    'concurrency/ForkJoinWorkerThread.d',
    'concurrency/Future.d',
    'concurrency/FuturePromise.d',
    'concurrency/FutureTask.d',
    'concurrency/Helpers.d',
    'concurrency/IdleTimeout.d',
    'concurrency/IteratingCallback.d',
    'concurrency/LinkedBlockingQueue.d',
    'concurrency/Locker.d',
    'concurrency/package.d',
    'concurrency/Promise.d',
    'concurrency/ScheduledExecutorService.d',
    'concurrency/ScheduledThreadPoolExecutor.d',
    'concurrency/Scheduler.d',
    'concurrency/SimpleQueue.d',
    'concurrency/TaskPool.d',
    'concurrency/ThreadFactory.d',
    'concurrency/thread/Helper.d',
    'concurrency/ThreadLocalRandom.d',
    'concurrency/thread/LockSupport.d',
    'concurrency/thread/package.d',
    'concurrency/ThreadPoolExecutor.d',
    'concurrency/thread/ThreadEx.d',
    'Double.d',
    'Enum.d',
    'event/EventLoop.d',
    'event/EventLoopGroup.d',
    'event/package.d',
    'event/selector/Epoll.d',
    'event/selector/IOCP.d',
    'event/selector/Kqueue.d',
    'event/selector/package.d',
    'event/selector/Selector.d',
    'event/timer/Common.d',
    'event/timer/Epoll.d',
    'event/timer/IOCP.d',
    'event/timer/Kqueue.d',
    'event/timer/package.d',
    'Exceptions.d',
    'Float.d',
    'Functions.d',
    'Integer.d',
    'io/BufferedInputStream.d',
    'io/BufferedOutputStream.d',
    'io/ByteArrayInputStream.d',
    'io/ByteArrayOutputStream.d',
    'io/channel/AbstractChannel.d',
    'io/channel/AbstractSocketChannel.d',
    'io/channel/Common.d',
    'io/channel/iocp/AbstractDatagramSocket.d',
    'io/channel/iocp/AbstractListener.d',
    'io/channel/iocp/AbstractStream.d',
    'io/channel/iocp/Common.d',
    'io/channel/iocp/package.d',
    'io/channel/package.d',
    'io/channel/posix/AbstractDatagramSocket.d',
    'io/channel/posix/AbstractListener.d',
    'io/channel/posix/AbstractStream.d',
    'io/channel/posix/EpollEventChannel.d',
    'io/channel/posix/KqueueEventChannel.d',
    'io/channel/posix/package.d',
    'io/Common.d',
    'io/DataInput.d',
    'io/DataInputStream.d',
    'io/DataOutput.d',
    'io/Externalizable.d',
    'io/FileDescriptor.d',
    'io/FileInputStream.d',
    'io/FileOutputStream.d',
    'io/FilterInputStream.d',
    'io/FilterOutputStream.d',
    'io/IOUtils.d',
    'io/ObjectInput.d',
    'io/ObjectOutput.d',
    'io/package.d',
    'io/PipedStream.d',
    'io/PushbackInputStream.d',
    'io/StringWriter.d',
    'io/TcpInputStream.d',
    'io/TcpListener.d',
    'io/TcpOutputStream.d',
    'io/TcpStream.d',
    'io/TcpStreamOptions.d',
    'io/UdpSocket.d',
    'io/Writer.d',
    'logging/ConsoleLogger.d',
    'logging/Helper.d',
    'logging/Logger.d',
    'logging/package.d',
    'Long.d',
    'math/BigDecimal.d',
    'math/BigInteger.d',
    'math/Helper.d',
    'math/MutableBigInteger.d',
    'math/package.d',
    'Nullable.d',
    'Number.d',
    'Object.d',
    'serialization/BinaryDeserializer.d',
    'serialization/BinarySerialization.d',
    'serialization/BinarySerializer.d',
    'serialization/Common.d',
    'serialization/JsonSerializer.d',
    'serialization/package.d',
    'serialization/Specify.d',
    'Short.d',
    'String.d',
    'system/Environment.d',
    'system/Error.d',
    'system/Locale.d',
    'system/Memory.d',
    'system/package.d',
    'system/syscall/os/FreeBSD.d',
    'system/syscall/os/Linux.d',
    'system/syscall/os/OSX.d',
    'system/syscall/package.d',
    'system/TimeZone.d',
    'system/WindowsHelper.d',
    'text/CharacterData/CharacterData.d',
    'text/CharacterData/CharacterDataLatin1.d',
    'text/CharacterData/package.d',
    'text/Charset.d',
    'text/Codec.d',
    'text/Common.d',
    'text/FormatterWrapper.d',
    'text/package.d',
    'text/PathMatcher.d',
    'text/Pattern.d',
    'text/PatternMatchUtils.d',
    'text/QuotedStringTokenizer.d',
    'text/QuoteUtil.d',
    'text/SearchPattern.d',
    'text/StringBuilder.d',
    'text/StringTokenizer.d',
    'text/StringUtils.d',
    'util/AcceptMimeType.d',
    'util/ApplicationEvent.d',
    'util/Argument.d',
    'util/ArrayHelper.d',
    'util/Common.d',
    'util/Comparator.d',
    'util/Configuration.d',
    'util/ConverterUtils.d',
    'util/DateTime.d',
    'util/Functional.d',
    'util/Lifecycle.d',
    'util/Locale.d',
    'util/MimeType.d',
    'util/ObjectUtils.d',
    'util/Serialize.d',
    'util/Spliterator.d',
    'util/Timer.d',
    'util/Traits.d',
    'util/TypeUtils.d',
    'util/UnitTest.d',
    'util/Uri.d',
    'util/WeakReference.d',
]

conf = configuration_data()

conf.set('DATA_PREFIX', hunt_data_dir)

mime_type_utils_d = configure_file(
    input: 'util/MimeTypeUtils.d',
    output: 'MimeTypeUtils.d',
    configuration: conf,
)

hunt_lib = library('hunt',
    [hunt_src, mime_type_utils_d],
    install: true,
    version: meson.project_version(),
    soversion: project_soversion,
    d_module_versions: d_mod_version,
    d_debug: d_debug,
    include_directories: src_inc,
    link_args: ['-shared', link_runtime_shared_arg],
)

hunt_dep = declare_dependency(
    link_with: hunt_lib,
    include_directories: src_inc,
)

pkgc.generate(
    hunt_lib,
    name: 'hunt-1',
    subdirs: 'd/hunt',
    version: meson.project_version(),
    description: 'Hunt: A refined core library for D programming language.',
)

# Fail to compile as of now
#hunt_test_exe = executable(
#    'hunt-text-exe',
#    [hunt_src, mime_type_utils_d],
#    include_directories: src_inc,
#    d_unittest: true,
#    d_args: '-main',
#    d_module_versions: d_mod_version,
#)

#test(
#    'hunt-test',
#    hunt_test_exe,
#)
