collection_src = [
    'MappedByteBuffer.d',
    'AbstractMap.d',
    'TreeTrie.d',
    'ArrayList.d',
    'LinkedHashSet.d',
    'Iterator.d',
    'TreeSet.d',
    'List.d',
    'ArrayTrie.d',
    'AbstractSequentialList.d',
    'CirularQueue.d',
    'TreeMap.d',
    'MultiValueMap.d',
    'AbstractList.d',
    'LinkedMultiValueMap.d',
    'NavigableMap.d',
    'Collection.d',
    'MultiMap.d',
    'Radix.d',
    'ArrayDeque.d',
    'ByteBuffer.d',
    'AbstractQueue.d',
    'Buffer.d',
    'HeapByteBuffer.d',
    'NavigableSet.d',
    'ArrayTernaryTrie.d',
    'AbstractCollection.d',
    'Collections.d',
    'Queue.d',
    'SortedSet.d',
    'StringBuffer.d',
    'AbstractDeque.d',
    'BufferUtils.d',
    'Enumeration.d',
    'HashMap.d',
    'DirectByteBuffer.d',
    'Set.d',
    'Common.d',
    'Deque.d',
    'package.d',
    'LinkedList.d',
    'AbstractSet.d',
    'Trie.d',
    'Map.d',
    'LinkedHashMap.d',
    'AbstractTrie.d',
    'SortedMap.d',
    'Array.d',
    'HashSet.d',
    'BitSet.d',
]

collection_lib = library('hunt-collection',
    collection_src,
    install: true,
    version: meson.project_version(),
    soversion: project_soversion,
    dependencies: [common_dep],
    d_module_versions: d_mod_version,
)

pkgc.generate(collection_lib,
              name: 'hunt-collection',
              subdirs: 'd/hunt/hunt/collection',
              version: meson.project_version(),
              description: 'Hunt collection library.',
              d_module_versions: d_mod_version,
)
