io_src = [
    'BufferedInputStream.d',
    'BufferedOutputStream.d',
    'ByteArrayInputStream.d',
    'ByteArrayOutputStream.d',
    'channel/AbstractChannel.d',
    'channel/AbstractSocketChannel.d',
    'channel/Common.d',
    'channel/iocp/AbstractDatagramSocket.d',
    'channel/iocp/AbstractListener.d',
    'channel/iocp/AbstractStream.d',
    'channel/iocp/Common.d',
    'channel/iocp/package.d',
    'channel/package.d',
    'channel/posix/AbstractDatagramSocket.d',
    'channel/posix/AbstractListener.d',
    'channel/posix/AbstractStream.d',
    'channel/posix/EpollEventChannel.d',
    'channel/posix/KqueueEventChannel.d',
    'channel/posix/package.d',
    'Common.d',
    'DataInput.d',
    'DataInputStream.d',
    'DataOutput.d',
    'Externalizable.d',
    'FileDescriptor.d',
    'FileInputStream.d',
    'FileOutputStream.d',
    'FilterInputStream.d',
    'FilterOutputStream.d',
    'IOUtils.d',
    'ObjectInput.d',
    'ObjectOutput.d',
    'package.d',
    'PipedStream.d',
    'PushbackInputStream.d',
    'StringWriter.d',
    'TcpInputStream.d',
    'TcpListener.d',
    'TcpOutputStream.d',
    'TcpStream.d',
    'TcpStreamOptions.d',
    'UdpSocket.d',
    'Writer.d',
]

io_lib = library('hunt-io',
    io_src,
    install: true,
    version: meson.project_version(),
    soversion: project_soversion,
    dependencies: [common_dep],
    d_module_versions: d_mod_version,
)

pkgc.generate(io_lib,
              name: 'hunt-io',
              subdirs: 'd/hunt-io',
              version: meson.project_version(),
              description: 'Hunt io library.',
              d_module_versions: d_mod_version,
)
