util_src = [
    'AcceptMimeType.d',
    'ApplicationEvent.d',
    'Argument.d',
    'ArrayHelper.d',
    'Common.d',
    'Comparator.d',
    'Configuration.d',
    'ConverterUtils.d',
    'DateTime.d',
    'Functional.d',
    'Lifecycle.d',
    'Locale.d',
    'MimeType.d',
    'MimeTypeUtils.d',
    'ObjectUtils.d',
    'Serialize.d',
    'Spliterator.d',
    'Timer.d',
    'Traits.d',
    'TypeUtils.d',
    'UnitTest.d',
    'Uri.d',
    'WeakReference.d',
]

util_lib = library('hunt-util',
    util_src,
    install: true,
    version: meson.project_version(),
    soversion: project_soversion,
    dependencies: [common_dep],
    d_module_versions: d_mod_version,
)

pkgc.generate(util_lib,
              name: 'hunt-util',
              subdirs: 'd/hunt/hunt/util',
              version: meson.project_version(),
              description: 'Hunt util library.',
              d_module_versions: d_mod_version,
)
